unpackaged/main/default/objects/NCP_Credits__c/NCP_Credits__c.object-meta.xml
<CustomObject>
    <label>NCP Credit</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>NCP_Credit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCP Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>