unpackaged/main/default/objects/NCP_Credits__c/fields/Auditor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Notes__c</fullName>
    <label>Auditor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>