unpackaged/main/default/objects/NCP_Credits__c/fields/Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Credit_Value__c</fullName>
    <formula>Minutes_of_Education__c /50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>