unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Audit_Adjusted_Value__c.field-meta.xml
<CustomField>
    <fullName>FON_Audit_Adjusted_Value__c</fullName>
    <label>Audit Adjusted Credit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>