unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Audit_Documentation_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>FON_Audit_Documentation_Upload_Date__c</fullName>
    <label>Audit Documentation Upload Date</label>
    <type>DateTime</type>
</CustomField>