unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Calculated_Adjusted_Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>FON_Calculated_Adjusted_Credit_Value__c</fullName>
    <formula>IF(OR(ISBLANK(FON_Audit_Adjusted_Value__c)==true,ISBLANK(TEXT(FON_Audit_Adjusted_Value__c))==true,ISNULL(FON_Audit_Adjusted_Value__c)==true),Minutes_of_Education__c / 50,FON_Audit_Adjusted_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Audit Adjusted Credit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>