unpackaged/main/default/objects/NCP_Credits__c/fields/FON_End_Date_Is_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>FON_End_Date_Is_Last_Year__c</fullName>
    <formula>IF( (YEAR(TODAY()) - YEAR(Program_Term__r.ProgramApi__End_Date__c)) = 1,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Is Last Year</label>
    <type>Checkbox</type>
</CustomField>