unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Instructor__c.field-meta.xml
<CustomField>
    <fullName>FON_Instructor__c</fullName>
    <label>Instructor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>