unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Is_Profile_Audited__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Profile_Audited__c</fullName>
    <formula>Program_Term__r.ProgramApi__Profile__r.FON_Audited__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Profile Audited</label>
    <type>Checkbox</type>
</CustomField>