unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Profile_Contact__c.field-meta.xml
<CustomField>
    <fullName>FON_Profile_Contact__c</fullName>
    <formula>Program_Term__r.ProgramApi__Profile__r.ProgramApi__Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Contact</label>
    <type>Text</type>
</CustomField>