unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Profile_Status__c.field-meta.xml
<CustomField>
    <fullName>FON_Profile_Status__c</fullName>
    <formula>TEXT(Program_Term__r.ProgramApi__Profile__r.ProgramApi__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Status</label>
    <type>Text</type>
</CustomField>