unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Program_Profile__c.field-meta.xml
<CustomField>
    <fullName>FON_Program_Profile__c</fullName>
    <formula>Program_Term__r.ProgramApi__Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Profile</label>
    <type>Text</type>
</CustomField>