unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>FON_Provider_Name__c</fullName>
    <label>Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>