unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Provider_Phone_and_or_Email__c.field-meta.xml
<CustomField>
    <fullName>FON_Provider_Phone_and_or_Email__c</fullName>
    <label>Provider Phone and/or Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>