unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>FON_Session_Date__c</fullName>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>