unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Session_Period__c.field-meta.xml
<CustomField>
    <fullName>FON_Session_Period__c</fullName>
    <label>Session Period</label>
    <type>Date</type>
</CustomField>