unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Speaker_Credits__c.field-meta.xml
<CustomField>
    <fullName>FON_Speaker_Credits__c</fullName>
    <label>Speaker Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>