unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>FON_Total_Credits__c</fullName>
    <formula>Credit_Value__c +  FON_Speaker_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>