unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Watched_Date__c.field-meta.xml
<CustomField>
    <fullName>FON_Watched_Date__c</fullName>
    <label>Watched Date</label>
    <type>Date</type>
</CustomField>