unpackaged/main/default/objects/NCP_Credits__c/fields/FON_Workshop_Attended_Credits_Acquired__c.field-meta.xml
<CustomField>
    <fullName>FON_Workshop_Attended_Credits_Acquired__c</fullName>
    <formula>IF(OR(Program_Term__r.FON_Workshops_Attended2__c &gt; 0,Program_Term__r.FON_Credits_Acquired__c  &gt; 0), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workshop Attended / Credits Acquired</label>
    <type>Checkbox</type>
</CustomField>