unpackaged/main/default/objects/NCP_Credits__c/fields/If_you_were_a_speaker_click_here__c.field-meta.xml
<CustomField>
    <fullName>If_you_were_a_speaker_click_here__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If you were a speaker click here</label>
    <type>Checkbox</type>
</CustomField>