unpackaged/main/default/objects/NCP_Credits__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>NCP Credits</relationshipLabel>
    <relationshipName>NCP_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>