unpackaged/main/default/objects/NCP_Credits__c/fields/Legacy_Credit_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Credit_Id__c</fullName>
    <label>Legacy Credit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>