unpackaged/main/default/objects/NCP_Credits__c/fields/Minutes_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Minutes_of_Education__c</fullName>
    <label>Minutes of Education</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>