unpackaged/main/default/objects/NCP_Credits__c/fields/NCP_Session__c.field-meta.xml
<CustomField>
    <fullName>NCP_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCP Session</label>
    <referenceTo>NCP_Sessions__c</referenceTo>
    <relationshipLabel>NCP Credits</relationshipLabel>
    <relationshipName>NCP_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>