unpackaged/main/default/objects/NCP_Credits__c/fields/Program_Goals__c.field-meta.xml
<CustomField>
    <fullName>Program_Goals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Goals</label>
    <referenceTo>ProgramApi__Goals__c</referenceTo>
    <relationshipName>FON_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>