unpackaged/main/default/objects/NCP_Credits__c/fields/Program_Term__c.field-meta.xml
<CustomField>
    <fullName>Program_Term__c</fullName>
    <label>Program Term</label>
    <referenceTo>ProgramApi__Program_Term__c</referenceTo>
    <relationshipLabel>NCP Credits</relationshipLabel>
    <relationshipName>NCP_Credits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>