unpackaged/main/default/objects/NCP_Credits__c/fields/Series_Name__c.field-meta.xml
<CustomField>
    <fullName>Series_Name__c</fullName>
    <label>Session Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>