unpackaged/main/default/objects/NCP_Credits__c/fields/Session_Description__c.field-meta.xml
<CustomField>
    <fullName>Session_Description__c</fullName>
    <label>Session Description</label>
    <type>TextArea</type>
</CustomField>