unpackaged/main/default/objects/NCP_Credits__c/fields/Session_Title__c.field-meta.xml
<CustomField>
    <fullName>Session_Title__c</fullName>
    <label>Session Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>