unpackaged/main/default/objects/NCP_Credits__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person Training</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Conference Call</fullName>
            </value>
            <value>
                <fullName>e-Publication</fullName>
            </value>
            <value>
                <fullName>ECCHO Business Committee Meeting</fullName>
            </value>
            <value>
                <fullName>ECCHO Hosted Session</fullName>
            </value>
            <value>
                <fullName>ECCHO NCP Editorial Board</fullName>
            </value>
            <value>
                <fullName>ECCHO OPS Chairman</fullName>
            </value>
            <value>
                <fullName>ECCHO OPS Committee Meeting</fullName>
            </value>
            <value>
                <fullName>General Session</fullName>
            </value>
            <value>
                <fullName>In-Person Meeting</fullName>
            </value>
            <value>
                <fullName>Lunch-N-Learn</fullName>
            </value>
            <value>
                <fullName>NCP CE Workshop</fullName>
            </value>
            <value>
                <fullName>NCP Evaluation of Pilot Items</fullName>
            </value>
            <value>
                <fullName>NCP Guide Program</fullName>
            </value>
            <value>
                <fullName>NCP Partner Training</fullName>
            </value>
            <value>
                <fullName>OnDemand</fullName>
            </value>
            <value>
                <fullName>Roundtable</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>User Group</fullName>
            </value>
            <value>
                <fullName>Web Based Training</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Series</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>CD Rom</fullName>
            </value>
            <value>
                <fullName>Teleconference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>