unpackaged/main/default/objects/NCP_Credits__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for Approval</fullName>
                <default>true</default>
                <label>Pending for Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Audited - Approved</fullName>
            </value>
            <value>
                <fullName>Audited - Rejected</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <isActive>false</isActive>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Not Considered</fullName>
                <isActive>false</isActive>
                <label>Not Considered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>