unpackaged/main/default/objects/NCP_Credits__c/fields/Supporting_Document_for_Audit__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Document_for_Audit__c</fullName>
    <label>Supporting Document for Audit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>