unpackaged/main/default/objects/NCP_Credits__c/validationRules/validat_250_character.validationRule-meta.xml
<ValidationRule>
    <fullName>validat_250_character</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Session_Description__c ) &gt; 250</errorConditionFormula>
    <errorDisplayField>Session_Description__c</errorDisplayField>
    <errorMessage>This field cannot exceed 250 characters.</errorMessage>
</ValidationRule>