unpackaged/main/default/objects/NCP_Credits__c/validationRules/validate_250_character.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_250_character</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Description__c ) &gt; 250</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>This field cannot exceed 250 characters.</errorMessage>
</ValidationRule>