unpackaged/main/default/objects/NCP_Credits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program_Term__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>FON_Session_Date__c</columns>
    <columns>Session_Title__c</columns>
    <columns>Series_Name__c</columns>
    <columns>FON_Provider_Name__c</columns>
    <columns>FON_Total_Credits__c</columns>
    <columns>Session_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>